# map-to-minigrid-generator

./: README.md  pyproject.toml
image2minigrid/: grid_generator.py
scripts/: image2grid.py
tests/: gen_minigrid_from_img.py  gen_minigrid_from_json.py  stt_harbor_env.py
